стилизация логотипа и меню в шапке сайта

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <!--https://github.com/SofyaKisliak/grid-template_20211701.git-->
 
   <header class="header">
-    <div class="header-overlay">
+    <div class="header-overlay"></div>
 
-    </div>
+
     <div class="header-menu">
       <div class="header-menu__container">
         <div class="header-logo">
           <a class="header-logo__link" href="#">
-            <span class="header-logo__accent">SITE </span> LOGO
+            <span class="header-logo__accent">SITE </span>LOGO
           </a>
         </div>
         <nav class="header-navbar">
@@ -48,9 +48,9 @@
           </ul>
         </nav>
 
-
       </div>
     </div>
+
     <div class="header-content">
       <div class="header-content__container">
         <h1 class="header-content__title">WE ARE REAL WEB-DEVELOPERS</h1>
@@ -59,8 +59,8 @@
           <a class="btn" href="#">Get started</a>
         </div>
       </div>
-    </div>
 
+    </div>
   </header>
 
 
