разметка блока skills

--- a/index.html
+++ b/index.html
@@ -63,7 +63,76 @@
     </div>
   </header>
 
+  <section class="skills">
+    <div class="skills__container">
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">HTML</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">CSS</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">Markup</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">Web-Desing</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">Quality Assurance</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">Codding</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">Adaptability</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">PHP</div>
+      </article>
+      <article class="skills-item">
+        <div class="skills-item__overlay"></div>
+        <div class="skills-item__image"></div>
+        <div class="skills-item__title">SEO</div>
+      </article>
+    </div>
+    <div class="skills__button">
+      <a class="btn-accent" href="#">View all skills...</a>
+    </div>
 
+
+
+
+
+
+
+
+
+
+  </section>
+  <!--<section></section>
+  <section></section>
+  <section></section>
+  <section></section>-->
+
+
+
+  <footer></footer>
 
 
 
