--- a/index.html
+++ b/index.html
@@ -65,50 +65,51 @@
 
   <section class="skills">
     <div class="skills__container">
+      <!--<h2 class="hidden">Skills title</h2>-->
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">HTML</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">HTML</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">CSS</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">CSS</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">Markup</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Markup</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">Web-Desing</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Web-Desing</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">Quality Assurance</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Quality Assurance</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">Codding</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Codding</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">Adaptability</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Adaptability</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">PHP</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">PHP</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay"></div>
         <div class="skills-item__image"></div>
-        <div class="skills-item__title">SEO</div>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">SEO</a></h3>
       </article>
     </div>
     <div class="skills__button">
