подготовка блоков skills и header к back-end

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!-- Код пишем здесь -->
   <!--https://github.com/SofyaKisliak/grid-template_20211701.git-->
 
-  <header class="header">
-    <div class="header-overlay"></div>
+  <header class="header" style="background-image: url(assets/img/img-header.png)">
+    <div class="header-overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
 
 
     <div class="header-menu">
@@ -67,48 +67,48 @@
     <div class="skills__container">
       <!--<h2 class="hidden">Skills title</h2>-->
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-html.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">HTML</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-css.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">CSS</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-markup.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">Markup</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-webdesign.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">Web-Desing</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-qa.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">Quality Assurance</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-codding.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">Codding</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-adaptability.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">Adaptability</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-php.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">PHP</a></h3>
       </article>
       <article class="skills-item">
-        <div class="skills-item__overlay"></div>
-        <div class="skills-item__image"></div>
+        <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
+        <div class="skills-item__image" style="background-image: url(assets/img/img-seo.png);"></div>
         <h3 class="skills-item__title"><a class="skills-item__link" href="#">SEO</a></h3>
       </article>
     </div>
