--- a/index.html
+++ b/index.html
@@ -126,9 +126,44 @@
 
 
   </section>
+
+  <section class="article">
+
+    <div class="article__container">
+      <div class="article__content">
+        <h2>Are You Ready?<br>Let's start!</h2>
+
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates commodi eligendi perspiciatis non
+        ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas!</p>
+      <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores ex obcaecati reiciendis quidem
+        ducimus et doloribus sed tempore, unde beatae aut consectetur eligendi ratione repellendus nulla pariatur.
+        Explicabo enim officia iure blanditiis eos, velit.</p>
+      <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit
+        necessitatibus placeat corporis enim aliquid sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates
+        maiores. Voluptas dolor quidem tempora illum laboriosam dolorum neque tenetur.</p>
+      <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident
+        unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates maiores.</p>
+      <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit
+        necessitatibus placeat corporis enim aliquid sequi saepe.</p>
+      <div class="article__image"><img src="assets/img/img-lamp-webdev.png" alt="motivation"></div>
+    </div>
+
+  </section>
+  <section class="form">
+    <form class="form__container" action="">
+      <div class="form-item">
+        <input class="form-item__input" type="text" placeholder="Your name...">
+      </div>
+      <div class="form-item">
+        <input class="form-item__input" type="text" placeholder="Your e-mail...">
+      </div>
+      <div class="form-item">
+        <button class="btn" type="submit">Subscribe</button>
+      </div>
+    </form>
+  </section>
   <!--<section></section>
-  <section></section>
-  <section></section>
   <section></section>-->
 
 
