стилизация блока footer hover, исправление цвета в тегах span

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <div class="post-item__image"><img src="assets/img/img-post-5.png" alt="post_5"></div>
             <div class="post-item__caption">
-              <h3>Facere rerum aliquam nostrum vel</h3>
+              <h3>Facere rerum aliquam nostrum vel repudiandae</h3>
               <p>Quo sit explicabo dolore, nihil soluta
                 adipisci deleniti consequatur voluptate
                 cumque, quaerat minima repudiandae
