--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <input class="form-item__input" type="text" placeholder="Your name...">
       </div>
       <div class="form-item">
-        <input class="form-item__input" type="text" placeholder="Your e-mail...">
+        <input class="form-item__input" type="text" placeholder="Your email...">
       </div>
       <div class="form-item">
         <button class="btn btn--modif" type="submit">Subscribe</button>
