--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             <span class="header-navbar__btn-row"></span>
             <span class="header-navbar__btn-row"></span>
             <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
           </div>
-          <ul class="header-navbar__list">
+
+          <ul class="header-navbar__list" ><!--style="display: block;-->
             <li class="header-navbar__item">
               <a class="header-navbar__link" href="#">Home</a>
             </li>
