responsiv md-sm, md-min, sm-min

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="header-content__container">
         <h1 class="header-content__title">WE ARE REAL WEB-DEVELOPERS</h1>
         <div class="header-content__buttons">
-          <a class="btn" href="#">Learn more</a>
-          <a class="btn" href="#">Get started</a>
+          <a class="btn btn--primary" href="#">Learn more</a>
+          <a class="btn btn--primary" href="#">Get started</a>
         </div>
       </div>
 
@@ -86,7 +86,7 @@
       <article class="skills-item">
         <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
         <div class="skills-item__image" style="background-image: url(assets/img/img-webdesign.png);"></div>
-        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Web-Desing</a></h3>
+        <h3 class="skills-item__title"><a class="skills-item__link" href="#">Web-Design</a></h3>
       </article>
       <article class="skills-item">
         <div class="skills-item__overlay" style="opacity: 0.8;background-color: #2d3651;"></div>
