--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="header-navbar__btn-row"></span>
           </div>
 
-          <ul class="header-navbar__list" ><!--style="display: block;-->
+          <ul class="header-navbar__list">
             <li class="header-navbar__item">
               <a class="header-navbar__link" href="#">Home</a>
             </li>
